[package]
name = "qlean"
version = "0.3.0"
authors = ["jl.jiang <jiangjl9807@gmail.com>"]
categories = ["development-tools::testing", "virtualization"]
description = "A system-level isolation testing library based on QEMU/KVM."
edition = "2024"
exclude = ["/.github"]
keywords = ["isolation", "testing", "kvm", "qemu"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/buck2hub/qlean"

[dependencies]
anyhow = "1.0.102"
console = "0.16.3"
dir-lock = "0.5.0"
directories = "6.0.0"
futures = "0.3"
hex = "0.4.3"
indicatif = "0.18.4"
kvm-ioctls = "0.24.0"
nanoid = "0.5.0"
qapi = { version = "0.15.0", features = ["qmp", "async-tokio-all"] }
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["stream"] }
russh = "0.61.1"
russh-sftp = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
sha2 = "0.11"
shell-escape = "0.1.5"
termion = "4.0.6"
tokio = { version = "1", features = ["full"] }
tokio-fd = "0.3.0"
tokio-util = "0.7.18"
tokio-vsock = "0.7.2"
tracing = { version = "0.1.44", features = ["log"] }
tracing-indicatif = "0.3.14"
walkdir = "2.5.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
serial_test = "3.4.0"
tempfile = "3.27.0"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "local-time",
] }

[[bench]]
name = "hash_benchmark"
harness = false

[profile.dev.package.sha2]
opt-level = 3
